# myproject1

./: LICENSE  README.md  Template.py  init_setup.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
experiments/: experiments.ipynb
src/: __init__.py
src/dataquick/: __init__.py  analyzer.py  cleaner.py  visualizer.py
